map/compiling_error.txt
In file included from /home/timemachine/Desktop/Homeworks/map/map.hpp:10:0:
/home/timemachine/Desktop/Homeworks/map/utility.hpp:13:2: warning: identifier ‘constexpr’ is a keyword in C++11 [-Wc++0x-compat]
  constexpr pair() : first(), second() {}
  ^
/home/timemachine/Desktop/Homeworks/map/map.hpp:171:4: warning: identifier ‘noexcept’ is a keyword in C++11 [-Wc++0x-compat]
    value_type* operator->() const noexcept
    ^
In file included from /home/timemachine/Desktop/Homeworks/map/map.hpp:10:0:
/home/timemachine/Desktop/Homeworks/map/utility.hpp:13:2: error: ‘constexpr’ does not name a type
  constexpr pair() : first(), second() {}
  ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp:13:2: note: C++11 ‘constexpr’ only available with -std=c++11 or -std=gnu++11
/home/timemachine/Desktop/Homeworks/map/utility.hpp:14:28: warning: defaulted and deleted functions only available with -std=c++11 or -std=gnu++11
  pair(const pair &other) = default;
                            ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp:15:12: error: expected ‘,’ or ‘...’ before ‘&&’ token
  pair(pair &&other) = default;
            ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp:15:23: warning: defaulted and deleted functions only available with -std=c++11 or -std=gnu++11
  pair(pair &&other) = default;
                       ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp:15:23: error: invalid constructor; you probably meant ‘sjtu::pair<T1, T2> (const sjtu::pair<T1, T2>&)’
/home/timemachine/Desktop/Homeworks/map/utility.hpp:18:10: error: expected ‘,’ or ‘...’ before ‘&&’ token
  pair(U1 &&x, U2 &&y) : first(x), second(y) {}
          ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp:22:20: error: expected ‘,’ or ‘...’ before ‘&&’ token
  pair(pair<U1, U2> &&other) : first(other.first), second(other.second) {}
                    ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp: In constructor ‘sjtu::pair<T1, T2>::pair(U1)’:
/home/timemachine/Desktop/Homeworks/map/utility.hpp:18:31: error: ‘x’ was not declared in this scope
  pair(U1 &&x, U2 &&y) : first(x), second(y) {}
                               ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp:18:42: error: ‘y’ was not declared in this scope
  pair(U1 &&x, U2 &&y) : first(x), second(y) {}
                                          ^
/home/timemachine/Desktop/Homeworks/map/utility.hpp: In constructor ‘sjtu::pair<T1, T2>::pair(sjtu::pair<U1, U2>)’:
/home/timemachine/Desktop/Homeworks/map/utility.hpp:22:37: error: ‘other’ was not declared in this scope
  pair(pair<U1, U2> &&other) : first(other.first), second(other.second) {}
                                     ^
In file included from /home/timemachine/Desktop/Homeworks/map/map.hpp:11:0:
/home/timemachine/Desktop/Homeworks/map/exceptions.hpp: At global scope:
/home/timemachine/Desktop/Homeworks/map/exceptions.hpp:12:30: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  const std::string variant = "";
                              ^
/home/timemachine/Desktop/Homeworks/map/exceptions.hpp:13:23: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  std::string detail = "";
                       ^
/home/timemachine/Desktop/Homeworks/map/map.hpp:171:29: error: expected ‘;’ at end of member declaration
    value_type* operator->() const noexcept
                             ^
/home/timemachine/Desktop/Homeworks/map/map.hpp:171:35: error: ‘noexcept’ does not name a type
    value_type* operator->() const noexcept
                                   ^
/home/timemachine/Desktop/Homeworks/map/map.hpp:171:35: note: C++11 ‘noexcept’ only available with -std=c++11 or -std=gnu++11
/home/timemachine/Desktop/Homeworks/map/map.hpp:269:35: error: expected ‘;’ at end of member declaration
    const value_type* operator->() const noexcept
                                   ^
/home/timemachine/Desktop/Homeworks/map/map.hpp:269:41: error: ‘noexcept’ does not name a type
    const value_type* operator->() const noexcept
                                         ^
/home/timemachine/Desktop/Homeworks/map/map.hpp:269:41: note: C++11 ‘noexcept’ only available with -std=c++11 or -std=gnu++11
/home/timemachine/Desktop/Homeworks/map/map.hpp: In constructor ‘sjtu::map<Key, T, Compare>::map()’:
/home/timemachine/Desktop/Homeworks/map/map.hpp:459:8: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11
  :null({Node(null)})
        ^
/home/timemachine/Desktop/Homeworks/map/map.hpp: In copy constructor ‘sjtu::map<Key, T, Compare>::map(const sjtu::map<Key, T, Compare>&)’:
/home/timemachine/Desktop/Homeworks/map/map.hpp:466:8: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11
  :null({Node(null)})
        ^
